[package]
name = "atcoder_today"
version = "0.1.0"
authors = ["nnenn0 <nnenn0memo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
rand = "0.8.3"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
url = "2.2.2"
url_open = "0.0.1"
